@@ -760,6 +760,6 @@ class LineDataTest(CoverageTest):
 
         self.start_import_stop(cov, "fun1")
 
-        cov._harvest_data()
-        fun1_lines = cov.data.line_data()[abs_file("fun1.py")]
+        data = cov.get_data()
+        fun1_lines = data.line_data()[abs_file("fun1.py")]
         self.assertEqual(fun1_lines, [1, 2, 5])
