@@ -18,6 +18,10 @@ Latest
 
 - The ``use_cache`` method is no longer supported.
 
+- The private method ``Coverage._harvest_data`` is now called
+  ``Coverage.get_data``, and returns the ``CoverageData`` containing the
+  collected data.
+
 .. 41 issues closed in 4.0 so far
 
 .. _issue 380: https://bitbucket.org/ned/coveragepy/issues/380/code-executed-by-exec-excluded-from
